[project]
name = "revvbase-backend"
version = "0.1.0"
description = "Revvbase API — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sqlmodel>=0.0.38",
    "alembic>=1.18.4",
    "geoalchemy2>=0.19.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "pyjwt>=2.12.1",
    "httpx>=0.28.1",
    "cloudinary>=1.44.2",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.12",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
